implemented mostof dimensionality_reduction, needs to check if done correctly.

--- a/funcDemo.ipynb
+++ b/funcDemo.ipynb
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T15:02:42.945788Z",
-     "start_time": "2024-12-17T15:02:42.941654Z"
+     "end_time": "2024-12-17T15:10:24.080055Z",
+     "start_time": "2024-12-17T15:10:22.181403Z"
     }
    },
    "cell_type": "code",
@@ -31,7 +31,7 @@
    ],
    "id": "e350d30dfccd23cd",
    "outputs": [],
-   "execution_count": 39
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -39,8 +39,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-17T15:04:13.571216Z",
-     "start_time": "2024-12-17T15:04:10.033567Z"
+     "end_time": "2024-12-17T15:12:08.847645Z",
+     "start_time": "2024-12-17T15:12:04.844887Z"
     }
    },
    "source": [
@@ -464,12 +464,12 @@
        "</div>"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 48
+   "execution_count": 34
   },
   {
    "metadata": {},
@@ -495,8 +495,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T15:04:15.737211Z",
-     "start_time": "2024-12-17T15:04:15.680133Z"
+     "end_time": "2024-12-17T15:12:12.893667Z",
+     "start_time": "2024-12-17T15:12:12.830301Z"
     }
    },
    "cell_type": "code",
@@ -927,12 +927,12 @@
        "</div>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 49
+   "execution_count": 35
   },
   {
    "metadata": {},
@@ -970,8 +970,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T15:07:50.788352Z",
-     "start_time": "2024-12-17T15:07:50.764354Z"
+     "end_time": "2024-12-17T15:12:17.017737Z",
+     "start_time": "2024-12-17T15:12:16.986397Z"
     }
    },
    "cell_type": "code",
@@ -1374,25 +1374,226 @@
        "</div>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 52
+   "execution_count": 36
+  },
+  {
+   "metadata": {},
+   "cell_type": "markdown",
+   "source": [
+    "Dimensionality Reduction Function\n",
+    "\n",
+    "Parameters:\n",
+    "    df (pd.DataFrame): Input DataFrame containing data for dimensionality reduction\n",
+    "    num_components (int): Number of principal components to retain\n",
+    "    meta_columns (list[str]): List of metadata columns to preserve unchanged\n",
+    "\n",
+    "Returns:\n",
+    "    pd.DataFrame: DataFrame with reduced dimensions and original metadata columns\n"
+   ],
+   "id": "a674838ea0d3f88f"
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-04T11:57:04.371863200Z",
-     "start_time": "2024-12-04T05:55:54.373320Z"
+     "end_time": "2024-12-17T17:02:59.617802Z",
+     "start_time": "2024-12-17T17:02:59.592870Z"
     }
    },
    "cell_type": "code",
-   "source": "",
-   "id": "9636dd31d39098e5",
-   "outputs": [],
-   "execution_count": null
+   "source": [
+    "def dimensionality_reduction(df: pd.DataFrame, num_components: int, meta_columns: list[str]) -> pd.DataFrame:\n",
+    "    #Saving meta data\n",
+    "    meta_data = df[meta_columns]\n",
+    "\n",
+    "    #removing meta collums\n",
+    "    non_meta_data = df.drop(columns = meta_columns)\n",
+    "\n",
+    "    #Calculate the mean of each column\n",
+    "    mean = non_meta_data.mean()\n",
+    "\n",
+    "    #Normalize the data\n",
+    "    normalized_non_meta_data = non_meta_data - mean\n",
+    "\n",
+    "    #Find covariance matrix\n",
+    "    cov_matrix = np.cov(normalized_non_meta_data, rowvar=False)\n",
+    "\n",
+    "    #Calculate the eigenvalues and eigenvectors\n",
+    "    eigen_vals, eigen_vecs = np.linalg.eig(cov_matrix)\n",
+    "\n",
+    "    #Sort eigen values and save list of orginal indexes\n",
+    "    sorted_indices = np.argsort(eigen_vals)[::-1]\n",
+    "\n",
+    "    #Sort vects by sorted_indices\n",
+    "    sorted_eigen_vecs = eigen_vecs[:, sorted_indices]\n",
+    "\n",
+    "    #Take only num_components columns\n",
+    "    principal_components = sorted_eigen_vecs[:, :num_components]\n",
+    "\n",
+    "    #Project the data onto the principal components\n",
+    "    reduced_data = non_meta_data@principal_components\n",
+    "\n",
+    "    #Create reduced data frame\n",
+    "    reduced_df = pd.DataFrame(reduced_data)\n",
+    "\n",
+    "    #Combine reduced data and meta data\n",
+    "    result_df = pd.concat([meta_data, reduced_df], axis=1)\n",
+    "\n",
+    "    return result_df\n",
+    "\n",
+    "dimensionality_reduction(data, 3, ['city_name', 'ballot_code'])\n"
+   ],
+   "id": "89c3dd743d80bf6f",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "              city_name  ballot_code           0           1           2\n",
+       "0       אבו גווייעד שבט          3.1   34.933779   49.177190  -32.375829\n",
+       "1       אבו גווייעד שבט          3.2   23.425629   31.375657  -17.816119\n",
+       "2       אבו גווייעד שבט          3.3   40.929584   54.658192  -29.399585\n",
+       "3       אבו גווייעד שבט          3.4   24.847688   32.473895  -19.595113\n",
+       "4               אבו גוש          1.1   57.708968   85.078170  -47.440210\n",
+       "...                 ...          ...         ...         ...         ...\n",
+       "12540              תקוע          3.0  -71.777375  -81.886127  -75.392210\n",
+       "12541              תקוע          4.0  -81.902059  -91.811634  -83.912305\n",
+       "12542  תראבין אצאנע שבט          1.0   -2.910931    4.345582  -19.916905\n",
+       "12543  תראבין אצאנעישוב          1.0  -48.424169  -22.209014  -77.113438\n",
+       "12544              תרום          1.0 -128.201920 -137.657693 -101.325459\n",
+       "\n",
+       "[12545 rows x 5 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>city_name</th>\n",
+       "      <th>ballot_code</th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>אבו גווייעד שבט</td>\n",
+       "      <td>3.1</td>\n",
+       "      <td>34.933779</td>\n",
+       "      <td>49.177190</td>\n",
+       "      <td>-32.375829</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>אבו גווייעד שבט</td>\n",
+       "      <td>3.2</td>\n",
+       "      <td>23.425629</td>\n",
+       "      <td>31.375657</td>\n",
+       "      <td>-17.816119</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>אבו גווייעד שבט</td>\n",
+       "      <td>3.3</td>\n",
+       "      <td>40.929584</td>\n",
+       "      <td>54.658192</td>\n",
+       "      <td>-29.399585</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>אבו גווייעד שבט</td>\n",
+       "      <td>3.4</td>\n",
+       "      <td>24.847688</td>\n",
+       "      <td>32.473895</td>\n",
+       "      <td>-19.595113</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>אבו גוש</td>\n",
+       "      <td>1.1</td>\n",
+       "      <td>57.708968</td>\n",
+       "      <td>85.078170</td>\n",
+       "      <td>-47.440210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12540</th>\n",
+       "      <td>תקוע</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>-71.777375</td>\n",
+       "      <td>-81.886127</td>\n",
+       "      <td>-75.392210</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12541</th>\n",
+       "      <td>תקוע</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>-81.902059</td>\n",
+       "      <td>-91.811634</td>\n",
+       "      <td>-83.912305</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12542</th>\n",
+       "      <td>תראבין אצאנע שבט</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-2.910931</td>\n",
+       "      <td>4.345582</td>\n",
+       "      <td>-19.916905</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12543</th>\n",
+       "      <td>תראבין אצאנעישוב</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-48.424169</td>\n",
+       "      <td>-22.209014</td>\n",
+       "      <td>-77.113438</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12544</th>\n",
+       "      <td>תרום</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>-128.201920</td>\n",
+       "      <td>-137.657693</td>\n",
+       "      <td>-101.325459</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12545 rows × 5 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 74
   }
  ],
  "metadata": {
