--- a/funcDemo.ipynb
+++ b/funcDemo.ipynb
@@ -1400,8 +1400,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T17:02:59.617802Z",
-     "start_time": "2024-12-17T17:02:59.592870Z"
+     "end_time": "2024-12-17T17:24:48.621637Z",
+     "start_time": "2024-12-17T17:24:48.596143Z"
     }
    },
    "cell_type": "code",
@@ -1435,7 +1435,7 @@
     "    principal_components = sorted_eigen_vecs[:, :num_components]\n",
     "\n",
     "    #Project the data onto the principal components\n",
-    "    reduced_data = non_meta_data@principal_components\n",
+    "    reduced_data = normalized_non_meta_data@principal_components\n",
     "\n",
     "    #Create reduced data frame\n",
     "    reduced_df = pd.DataFrame(reduced_data)\n",
@@ -1453,17 +1453,17 @@
      "data": {
       "text/plain": [
        "              city_name  ballot_code           0           1           2\n",
-       "0       אבו גווייעד שבט          3.1   34.933779   49.177190  -32.375829\n",
-       "1       אבו גווייעד שבט          3.2   23.425629   31.375657  -17.816119\n",
-       "2       אבו גווייעד שבט          3.3   40.929584   54.658192  -29.399585\n",
-       "3       אבו גווייעד שבט          3.4   24.847688   32.473895  -19.595113\n",
-       "4               אבו גוש          1.1   57.708968   85.078170  -47.440210\n",
+       "0       אבו גווייעד שבט          3.1  106.105293   97.442477  -35.129084\n",
+       "1       אבו גווייעד שבט          3.2   94.597143   79.640944  -20.569373\n",
+       "2       אבו גווייעד שבט          3.3  112.101099  102.923479  -32.152839\n",
+       "3       אבו גווייעד שבט          3.4   96.019202   80.739182  -22.348367\n",
+       "4               אבו גוש          1.1  128.880482  133.343458  -50.193464\n",
        "...                 ...          ...         ...         ...         ...\n",
-       "12540              תקוע          3.0  -71.777375  -81.886127  -75.392210\n",
-       "12541              תקוע          4.0  -81.902059  -91.811634  -83.912305\n",
-       "12542  תראבין אצאנע שבט          1.0   -2.910931    4.345582  -19.916905\n",
-       "12543  תראבין אצאנעישוב          1.0  -48.424169  -22.209014  -77.113438\n",
-       "12544              תרום          1.0 -128.201920 -137.657693 -101.325459\n",
+       "12540              תקוע          3.0   -0.605860  -33.620839  -78.145465\n",
+       "12541              תקוע          4.0  -10.730545  -43.546347  -86.665559\n",
+       "12542  תראבין אצאנע שבט          1.0   68.260583   52.610869  -22.670159\n",
+       "12543  תראבין אצאנעישוב          1.0   22.747345   26.056273  -79.866692\n",
+       "12544              תרום          1.0  -57.030406  -89.392406 -104.078714\n",
        "\n",
        "[12545 rows x 5 columns]"
       ],
@@ -1498,41 +1498,41 @@
        "      <th>0</th>\n",
        "      <td>אבו גווייעד שבט</td>\n",
        "      <td>3.1</td>\n",
-       "      <td>34.933779</td>\n",
-       "      <td>49.177190</td>\n",
-       "      <td>-32.375829</td>\n",
+       "      <td>106.105293</td>\n",
+       "      <td>97.442477</td>\n",
+       "      <td>-35.129084</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>אבו גווייעד שבט</td>\n",
        "      <td>3.2</td>\n",
-       "      <td>23.425629</td>\n",
-       "      <td>31.375657</td>\n",
-       "      <td>-17.816119</td>\n",
+       "      <td>94.597143</td>\n",
+       "      <td>79.640944</td>\n",
+       "      <td>-20.569373</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>אבו גווייעד שבט</td>\n",
        "      <td>3.3</td>\n",
-       "      <td>40.929584</td>\n",
-       "      <td>54.658192</td>\n",
-       "      <td>-29.399585</td>\n",
+       "      <td>112.101099</td>\n",
+       "      <td>102.923479</td>\n",
+       "      <td>-32.152839</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>אבו גווייעד שבט</td>\n",
        "      <td>3.4</td>\n",
-       "      <td>24.847688</td>\n",
-       "      <td>32.473895</td>\n",
-       "      <td>-19.595113</td>\n",
+       "      <td>96.019202</td>\n",
+       "      <td>80.739182</td>\n",
+       "      <td>-22.348367</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>אבו גוש</td>\n",
        "      <td>1.1</td>\n",
-       "      <td>57.708968</td>\n",
-       "      <td>85.078170</td>\n",
-       "      <td>-47.440210</td>\n",
+       "      <td>128.880482</td>\n",
+       "      <td>133.343458</td>\n",
+       "      <td>-50.193464</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -1546,41 +1546,41 @@
        "      <th>12540</th>\n",
        "      <td>תקוע</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>-71.777375</td>\n",
-       "      <td>-81.886127</td>\n",
-       "      <td>-75.392210</td>\n",
+       "      <td>-0.605860</td>\n",
+       "      <td>-33.620839</td>\n",
+       "      <td>-78.145465</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12541</th>\n",
        "      <td>תקוע</td>\n",
        "      <td>4.0</td>\n",
-       "      <td>-81.902059</td>\n",
-       "      <td>-91.811634</td>\n",
-       "      <td>-83.912305</td>\n",
+       "      <td>-10.730545</td>\n",
+       "      <td>-43.546347</td>\n",
+       "      <td>-86.665559</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12542</th>\n",
        "      <td>תראבין אצאנע שבט</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>-2.910931</td>\n",
-       "      <td>4.345582</td>\n",
-       "      <td>-19.916905</td>\n",
+       "      <td>68.260583</td>\n",
+       "      <td>52.610869</td>\n",
+       "      <td>-22.670159</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12543</th>\n",
        "      <td>תראבין אצאנעישוב</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>-48.424169</td>\n",
-       "      <td>-22.209014</td>\n",
-       "      <td>-77.113438</td>\n",
+       "      <td>22.747345</td>\n",
+       "      <td>26.056273</td>\n",
+       "      <td>-79.866692</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12544</th>\n",
        "      <td>תרום</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>-128.201920</td>\n",
-       "      <td>-137.657693</td>\n",
-       "      <td>-101.325459</td>\n",
+       "      <td>-57.030406</td>\n",
+       "      <td>-89.392406</td>\n",
+       "      <td>-104.078714</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1588,12 +1588,12 @@
        "</div>"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 74
+   "execution_count": 75
   }
  ],
  "metadata": {
