added labled columns for the dimensionality reduced data

--- a/funcDemo.ipynb
+++ b/funcDemo.ipynb
@@ -20,8 +20,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T15:10:24.080055Z",
-     "start_time": "2024-12-17T15:10:22.181403Z"
+     "end_time": "2024-12-17T17:32:49.664610Z",
+     "start_time": "2024-12-17T17:32:49.016538Z"
     }
    },
    "cell_type": "code",
@@ -31,7 +31,7 @@
    ],
    "id": "e350d30dfccd23cd",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "cell_type": "code",
@@ -39,8 +39,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-12-17T15:12:08.847645Z",
-     "start_time": "2024-12-17T15:12:04.844887Z"
+     "end_time": "2024-12-17T17:32:53.579405Z",
+     "start_time": "2024-12-17T17:32:49.680316Z"
     }
    },
    "source": [
@@ -464,12 +464,12 @@
        "</div>"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 34
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -495,8 +495,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T15:12:12.893667Z",
-     "start_time": "2024-12-17T15:12:12.830301Z"
+     "end_time": "2024-12-17T17:32:53.744917Z",
+     "start_time": "2024-12-17T17:32:53.693299Z"
     }
    },
    "cell_type": "code",
@@ -927,12 +927,12 @@
        "</div>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 35
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -970,8 +970,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T15:12:17.017737Z",
-     "start_time": "2024-12-17T15:12:16.986397Z"
+     "end_time": "2024-12-17T18:21:04.092088Z",
+     "start_time": "2024-12-17T18:21:04.065791Z"
     }
    },
    "cell_type": "code",
@@ -982,7 +982,6 @@
     "    \n",
     "    # calculate the sum of each column\n",
     "    column_totals = indexed_data.sum()\n",
-    "        \n",
     "    return indexed_data[list(column_totals[column_totals > threshold].index)]\n",
     "    \n",
     "\n",
@@ -1374,12 +1373,12 @@
        "</div>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 36
+   "execution_count": 33
   },
   {
    "metadata": {},
@@ -1400,8 +1399,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-12-17T17:24:48.621637Z",
-     "start_time": "2024-12-17T17:24:48.596143Z"
+     "end_time": "2024-12-17T18:29:01.308758Z",
+     "start_time": "2024-12-17T18:29:01.264777Z"
     }
    },
    "cell_type": "code",
@@ -1435,37 +1434,77 @@
     "    principal_components = sorted_eigen_vecs[:, :num_components]\n",
     "\n",
     "    #Project the data onto the principal components\n",
+    "    #matrix multiplication between a pandas.DataFrame (normalized_non_meta_data) and a NumPy ndarray (principal_components) NxM dot Mxnum_components\n",
     "    reduced_data = normalized_non_meta_data@principal_components\n",
     "\n",
-    "    #Create reduced data frame\n",
-    "    reduced_df = pd.DataFrame(reduced_data)\n",
-    "\n",
+    "    labled_columns = {i:f'PC{i+1}' for i in range(num_components)}\n",
+    "    reduced_data.rename(columns=labled_columns, inplace=True)\n",
+    "    \n",
     "    #Combine reduced data and meta data\n",
-    "    result_df = pd.concat([meta_data, reduced_df], axis=1)\n",
+    "    result_df = pd.concat([meta_data, reduced_data], axis=1)\n",
     "\n",
     "    return result_df\n",
     "\n",
-    "dimensionality_reduction(data, 3, ['city_name', 'ballot_code'])\n"
+    "dimensionality_reduction(data, 40, ['city_name', 'ballot_code'])\n"
    ],
    "id": "89c3dd743d80bf6f",
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "              city_name  ballot_code           0           1           2\n",
-       "0       אבו גווייעד שבט          3.1  106.105293   97.442477  -35.129084\n",
-       "1       אבו גווייעד שבט          3.2   94.597143   79.640944  -20.569373\n",
-       "2       אבו גווייעד שבט          3.3  112.101099  102.923479  -32.152839\n",
-       "3       אבו גווייעד שבט          3.4   96.019202   80.739182  -22.348367\n",
-       "4               אבו גוש          1.1  128.880482  133.343458  -50.193464\n",
-       "...                 ...          ...         ...         ...         ...\n",
-       "12540              תקוע          3.0   -0.605860  -33.620839  -78.145465\n",
-       "12541              תקוע          4.0  -10.730545  -43.546347  -86.665559\n",
-       "12542  תראבין אצאנע שבט          1.0   68.260583   52.610869  -22.670159\n",
-       "12543  תראבין אצאנעישוב          1.0   22.747345   26.056273  -79.866692\n",
-       "12544              תרום          1.0  -57.030406  -89.392406 -104.078714\n",
+       "              city_name  ballot_code         PC1         PC2         PC3  \\\n",
+       "0       אבו גווייעד שבט          3.1  106.105293   97.442477  -35.129084   \n",
+       "1       אבו גווייעד שבט          3.2   94.597143   79.640944  -20.569373   \n",
+       "2       אבו גווייעד שבט          3.3  112.101099  102.923479  -32.152839   \n",
+       "3       אבו גווייעד שבט          3.4   96.019202   80.739182  -22.348367   \n",
+       "4               אבו גוש          1.1  128.880482  133.343458  -50.193464   \n",
+       "...                 ...          ...         ...         ...         ...   \n",
+       "12540              תקוע          3.0   -0.605860  -33.620839  -78.145465   \n",
+       "12541              תקוע          4.0  -10.730545  -43.546347  -86.665559   \n",
+       "12542  תראבין אצאנע שבט          1.0   68.260583   52.610869  -22.670159   \n",
+       "12543  תראבין אצאנעישוב          1.0   22.747345   26.056273  -79.866692   \n",
+       "12544              תרום          1.0  -57.030406  -89.392406 -104.078714   \n",
        "\n",
-       "[12545 rows x 5 columns]"
+       "              PC4        PC5        PC6        PC7        PC8  ...      PC31  \\\n",
+       "0        4.766631 -58.292460 -57.537311 -16.179614   7.572595  ... -0.150500   \n",
+       "1       -3.295615 -26.482049 -75.632222 -19.650744  14.178884  ... -0.096809   \n",
+       "2        1.745442 -76.101065 -67.239858 -13.834683   6.052740  ... -0.072990   \n",
+       "3       -1.943181 -31.771452 -74.472594 -17.785461  13.276107  ... -0.043944   \n",
+       "4        6.868926 -11.329712  28.043860   5.138584  22.272580  ... -0.073082   \n",
+       "...           ...        ...        ...        ...        ...  ...       ...   \n",
+       "12540 -108.617809   8.903057 -14.674740 -24.093967  11.225001  ... -0.079350   \n",
+       "12541 -153.265957   0.676327  -4.883450 -31.754966  -8.522054  ...  0.516834   \n",
+       "12542    5.508422  10.447867 -68.599779 -26.168421  21.781247  ... -0.044845   \n",
+       "12543   63.598808 -46.729915 -26.954763 -42.437958  28.736244  ... -0.064490   \n",
+       "12544  -21.322530 -16.906617  26.899810 -12.330856  22.530382  ... -0.047397   \n",
+       "\n",
+       "           PC32      PC33      PC34      PC35      PC36      PC37      PC38  \\\n",
+       "0     -0.072778 -0.026014  0.010786 -0.015498  0.039632 -0.037404  0.012312   \n",
+       "1     -0.044650 -0.023473  0.009227 -0.012987  0.021241 -0.029798  0.011205   \n",
+       "2     -0.045975 -0.028681  0.013481 -0.012837  0.026772 -0.037493  0.006428   \n",
+       "3      0.005564  0.063127 -0.069699  0.048384  0.150415  0.736673 -0.642818   \n",
+       "4     -0.035797 -0.028614  0.058283 -0.087357  0.052363 -0.042241 -0.004707   \n",
+       "...         ...       ...       ...       ...       ...       ...       ...   \n",
+       "12540 -0.041303 -0.020544  0.001235 -0.030377  0.013211 -0.003816 -0.005686   \n",
+       "12541  0.927979  0.592962  0.582873  0.119617  0.010025 -0.029999  0.044805   \n",
+       "12542 -0.013299 -0.021412  0.009213 -0.010870  0.006803 -0.024501  0.008173   \n",
+       "12543 -0.021308 -0.029451  0.011705 -0.017844  0.019578 -0.027420  0.013007   \n",
+       "12544 -0.006712 -0.012019 -0.000066 -0.023553  0.011707 -0.007301  0.003310   \n",
+       "\n",
+       "           PC39      PC40  \n",
+       "0      0.028881  0.021760  \n",
+       "1      0.021257  0.014111  \n",
+       "2      0.024594  0.014803  \n",
+       "3      0.097089 -0.949841  \n",
+       "4      0.010927  0.009168  \n",
+       "...         ...       ...  \n",
+       "12540  0.004067  0.005528  \n",
+       "12541  0.030566  0.016891  \n",
+       "12542  0.013879  0.008263  \n",
+       "12543  0.018769  0.014927  \n",
+       "12544  0.003945  0.013472  \n",
+       "\n",
+       "[12545 rows x 42 columns]"
       ],
       "text/html": [
        "<div>\n",
@@ -1488,9 +1527,25 @@
        "      <th></th>\n",
        "      <th>city_name</th>\n",
        "      <th>ballot_code</th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
+       "      <th>PC1</th>\n",
+       "      <th>PC2</th>\n",
+       "      <th>PC3</th>\n",
+       "      <th>PC4</th>\n",
+       "      <th>PC5</th>\n",
+       "      <th>PC6</th>\n",
+       "      <th>PC7</th>\n",
+       "      <th>PC8</th>\n",
+       "      <th>...</th>\n",
+       "      <th>PC31</th>\n",
+       "      <th>PC32</th>\n",
+       "      <th>PC33</th>\n",
+       "      <th>PC34</th>\n",
+       "      <th>PC35</th>\n",
+       "      <th>PC36</th>\n",
+       "      <th>PC37</th>\n",
+       "      <th>PC38</th>\n",
+       "      <th>PC39</th>\n",
+       "      <th>PC40</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -1501,6 +1556,22 @@
        "      <td>106.105293</td>\n",
        "      <td>97.442477</td>\n",
        "      <td>-35.129084</td>\n",
+       "      <td>4.766631</td>\n",
+       "      <td>-58.292460</td>\n",
+       "      <td>-57.537311</td>\n",
+       "      <td>-16.179614</td>\n",
+       "      <td>7.572595</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.150500</td>\n",
+       "      <td>-0.072778</td>\n",
+       "      <td>-0.026014</td>\n",
+       "      <td>0.010786</td>\n",
+       "      <td>-0.015498</td>\n",
+       "      <td>0.039632</td>\n",
+       "      <td>-0.037404</td>\n",
+       "      <td>0.012312</td>\n",
+       "      <td>0.028881</td>\n",
+       "      <td>0.021760</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1509,6 +1580,22 @@
        "      <td>94.597143</td>\n",
        "      <td>79.640944</td>\n",
        "      <td>-20.569373</td>\n",
+       "      <td>-3.295615</td>\n",
+       "      <td>-26.482049</td>\n",
+       "      <td>-75.632222</td>\n",
+       "      <td>-19.650744</td>\n",
+       "      <td>14.178884</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.096809</td>\n",
+       "      <td>-0.044650</td>\n",
+       "      <td>-0.023473</td>\n",
+       "      <td>0.009227</td>\n",
+       "      <td>-0.012987</td>\n",
+       "      <td>0.021241</td>\n",
+       "      <td>-0.029798</td>\n",
+       "      <td>0.011205</td>\n",
+       "      <td>0.021257</td>\n",
+       "      <td>0.014111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1517,6 +1604,22 @@
        "      <td>112.101099</td>\n",
        "      <td>102.923479</td>\n",
        "      <td>-32.152839</td>\n",
+       "      <td>1.745442</td>\n",
+       "      <td>-76.101065</td>\n",
+       "      <td>-67.239858</td>\n",
+       "      <td>-13.834683</td>\n",
+       "      <td>6.052740</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.072990</td>\n",
+       "      <td>-0.045975</td>\n",
+       "      <td>-0.028681</td>\n",
+       "      <td>0.013481</td>\n",
+       "      <td>-0.012837</td>\n",
+       "      <td>0.026772</td>\n",
+       "      <td>-0.037493</td>\n",
+       "      <td>0.006428</td>\n",
+       "      <td>0.024594</td>\n",
+       "      <td>0.014803</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1525,6 +1628,22 @@
        "      <td>96.019202</td>\n",
        "      <td>80.739182</td>\n",
        "      <td>-22.348367</td>\n",
+       "      <td>-1.943181</td>\n",
+       "      <td>-31.771452</td>\n",
+       "      <td>-74.472594</td>\n",
+       "      <td>-17.785461</td>\n",
+       "      <td>13.276107</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.043944</td>\n",
+       "      <td>0.005564</td>\n",
+       "      <td>0.063127</td>\n",
+       "      <td>-0.069699</td>\n",
+       "      <td>0.048384</td>\n",
+       "      <td>0.150415</td>\n",
+       "      <td>0.736673</td>\n",
+       "      <td>-0.642818</td>\n",
+       "      <td>0.097089</td>\n",
+       "      <td>-0.949841</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1533,9 +1652,41 @@
        "      <td>128.880482</td>\n",
        "      <td>133.343458</td>\n",
        "      <td>-50.193464</td>\n",
+       "      <td>6.868926</td>\n",
+       "      <td>-11.329712</td>\n",
+       "      <td>28.043860</td>\n",
+       "      <td>5.138584</td>\n",
+       "      <td>22.272580</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.073082</td>\n",
+       "      <td>-0.035797</td>\n",
+       "      <td>-0.028614</td>\n",
+       "      <td>0.058283</td>\n",
+       "      <td>-0.087357</td>\n",
+       "      <td>0.052363</td>\n",
+       "      <td>-0.042241</td>\n",
+       "      <td>-0.004707</td>\n",
+       "      <td>0.010927</td>\n",
+       "      <td>0.009168</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -1549,6 +1700,22 @@
        "      <td>-0.605860</td>\n",
        "      <td>-33.620839</td>\n",
        "      <td>-78.145465</td>\n",
+       "      <td>-108.617809</td>\n",
+       "      <td>8.903057</td>\n",
+       "      <td>-14.674740</td>\n",
+       "      <td>-24.093967</td>\n",
+       "      <td>11.225001</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.079350</td>\n",
+       "      <td>-0.041303</td>\n",
+       "      <td>-0.020544</td>\n",
+       "      <td>0.001235</td>\n",
+       "      <td>-0.030377</td>\n",
+       "      <td>0.013211</td>\n",
+       "      <td>-0.003816</td>\n",
+       "      <td>-0.005686</td>\n",
+       "      <td>0.004067</td>\n",
+       "      <td>0.005528</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12541</th>\n",
@@ -1557,6 +1724,22 @@
        "      <td>-10.730545</td>\n",
        "      <td>-43.546347</td>\n",
        "      <td>-86.665559</td>\n",
+       "      <td>-153.265957</td>\n",
+       "      <td>0.676327</td>\n",
+       "      <td>-4.883450</td>\n",
+       "      <td>-31.754966</td>\n",
+       "      <td>-8.522054</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.516834</td>\n",
+       "      <td>0.927979</td>\n",
+       "      <td>0.592962</td>\n",
+       "      <td>0.582873</td>\n",
+       "      <td>0.119617</td>\n",
+       "      <td>0.010025</td>\n",
+       "      <td>-0.029999</td>\n",
+       "      <td>0.044805</td>\n",
+       "      <td>0.030566</td>\n",
+       "      <td>0.016891</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12542</th>\n",
@@ -1565,6 +1748,22 @@
        "      <td>68.260583</td>\n",
        "      <td>52.610869</td>\n",
        "      <td>-22.670159</td>\n",
+       "      <td>5.508422</td>\n",
+       "      <td>10.447867</td>\n",
+       "      <td>-68.599779</td>\n",
+       "      <td>-26.168421</td>\n",
+       "      <td>21.781247</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.044845</td>\n",
+       "      <td>-0.013299</td>\n",
+       "      <td>-0.021412</td>\n",
+       "      <td>0.009213</td>\n",
+       "      <td>-0.010870</td>\n",
+       "      <td>0.006803</td>\n",
+       "      <td>-0.024501</td>\n",
+       "      <td>0.008173</td>\n",
+       "      <td>0.013879</td>\n",
+       "      <td>0.008263</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12543</th>\n",
@@ -1573,6 +1772,22 @@
        "      <td>22.747345</td>\n",
        "      <td>26.056273</td>\n",
        "      <td>-79.866692</td>\n",
+       "      <td>63.598808</td>\n",
+       "      <td>-46.729915</td>\n",
+       "      <td>-26.954763</td>\n",
+       "      <td>-42.437958</td>\n",
+       "      <td>28.736244</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.064490</td>\n",
+       "      <td>-0.021308</td>\n",
+       "      <td>-0.029451</td>\n",
+       "      <td>0.011705</td>\n",
+       "      <td>-0.017844</td>\n",
+       "      <td>0.019578</td>\n",
+       "      <td>-0.027420</td>\n",
+       "      <td>0.013007</td>\n",
+       "      <td>0.018769</td>\n",
+       "      <td>0.014927</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>12544</th>\n",
@@ -1581,19 +1796,43 @@
        "      <td>-57.030406</td>\n",
        "      <td>-89.392406</td>\n",
        "      <td>-104.078714</td>\n",
+       "      <td>-21.322530</td>\n",
+       "      <td>-16.906617</td>\n",
+       "      <td>26.899810</td>\n",
+       "      <td>-12.330856</td>\n",
+       "      <td>22.530382</td>\n",
+       "      <td>...</td>\n",
+       "      <td>-0.047397</td>\n",
+       "      <td>-0.006712</td>\n",
+       "      <td>-0.012019</td>\n",
+       "      <td>-0.000066</td>\n",
+       "      <td>-0.023553</td>\n",
+       "      <td>0.011707</td>\n",
+       "      <td>-0.007301</td>\n",
+       "      <td>0.003310</td>\n",
+       "      <td>0.003945</td>\n",
+       "      <td>0.013472</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>12545 rows × 5 columns</p>\n",
+       "<p>12545 rows × 42 columns</p>\n",
        "</div>"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 75
+   "execution_count": 35
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "cf08294870fc886d"
   }
  ],
  "metadata": {
